# ai-team-cookiecutter

./: .flake8  .gitignore  .pdm.toml  Makefile  README.md  cookiecutter.json  pyproject.toml  tox.ini
.github/workflows/: on-commit.yml  on-dev-commit.yml
docs/: console_script_setup.md  tutorial.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  pyproject.toml
{{cookiecutter.project_slug}}/docs/: installation.md
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.pkg_name}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: __init__.py  cli.py  {{cookiecutter.pkg_name}}.py
